--- a/caller/src/main/resources/templates/index.html
+++ b/caller/src/main/resources/templates/index.html
@@ -3,28 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>간단한 웹페이지</title>
+  <title>실험실</title>
   <!-- 부트스트랩 CSS 링크 추가 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container mt-5">
-  <h1>실험실 페이지</h1>
-  <div class="row mt-3">
-    <div class="col-6">
-      <!-- 버튼 그룹 -->
-      <div class="btn-group" role="group" aria-label="Basic example">
-        <!-- 버튼 1 -->
-        <a th:href="@{/health}" class="btn btn-primary">헬스 체크</a>
-        <!-- 버튼 2 -->
-        <a th:href="@{/log}" class="btn btn-secondary">로그 생성</a>
-        <!-- 버튼 3 -->
-        <a th:href="@{/calculate/all}" class="btn btn-success">DB 마비</a>
-        <!-- 버튼 4 -->
-        <a th:href="@{/db/postgresql/sleep}" class="btn btn-danger">CPU 부하</a>
-      </div>
+  <div class="row justify-content-center align-items-center" style="height: 100vh;">
+    <div class="col-12 text-center">
+      <a th:href="@{/health}" class="btn btn-primary m-2">헬스 체크</a>
+      <a th:href="@{/log}" class="btn btn-secondary m-2">로그 생성</a>
+      <a th:href="@{/calculate/all}" class="btn btn-success m-2">DB 느리게</a>
+      <a th:href="@{/db/postgresql/sleep}" class="btn btn-danger m-2">CPU 부하 상승</a>
     </div>
   </div>
+
 </div>
 <!-- 부트스트랩 자바스크립트 및 의존성 추가 -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
