feat: footer 추가

--- a/caller/src/main/resources/templates/index.html
+++ b/caller/src/main/resources/templates/index.html
@@ -55,6 +55,7 @@
           진행됩니다.
         </div>
       </div>
+      <div class="footer">©2024. WhaTap Labs Inc. all rights reserved.</div>
     </div>
     <script src="js/script.js"></script>
   </body>
